feat: implement enhanced development pattern and basic Fastify server
- Add enhanced development.md with mandatory 4-step pattern
- Create finding: pattern enforcement requires explicit structure
- Document AI agent compliance issues and solutions
- Add decision logs for development principles and framework selection
- Implement TypeScript + Fastify server with health endpoint
- Set up dependency-driven development approach
- Add comprehensive project documentation and structure

This commit establishes the critical development workflow and provides
a working Fastify server foundation that follows technical design
requirements and maintains architectural consistency.

--- a/.gitignore
+++ b/.gitignore
@@ -1,65 +1,22 @@
 # Dependencies
 node_modules/
-venv/
-env/
-.env
-.venv
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Node.js
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
 
-# IDEs and editors
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
-logs/
+logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Runtime data
-pids/
+pids
 *.pid
 *.seed
 *.pid.lock
@@ -80,12 +37,6 @@ jspm_packages/
 # Optional eslint cache
 .eslintcache
 
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
 # Optional REPL history
 .node_repl_history
 
@@ -97,43 +48,51 @@ jspm_packages/
 
 # dotenv environment variables file
 .env
-.env.test
-.env.local
-.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
 
-# Next.js build output
+# next.js build output
 .next
 
-# Nuxt.js build / generate output
+# nuxt.js build output
 .nuxt
-dist
 
-# Gatsby files
-.cache/
-public
+# vuepress build output
+.vuepress/dist
 
-# Storybook build outputs
-.out
-.storybook-out
+# Serverless directories
+.serverless
 
-# Temporary folders
-tmp/
-temp/
+# FuseBox cache
+.fusebox/
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# DynamoDB Local files
+.dynamodb/
 
-# Configuration files with sensitive data
-config/local.json
-config/production.json
-secrets/
+# TernJS port file
+.tern-port
 
-# Test artifacts
-test-results/
-coverage/
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
