--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "strava-vagabond",
   "version": "1.0.0",
   "description": "A backend application that analyzes Strava ride activities to track unique paths and calculate the percentage of new routes discovered on each ride.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "echo 'Add nodemon when implementing development server'",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsx watch src/index.ts",
     "test": "echo 'Add jest when implementing testing'",
     "lint": "echo 'Add eslint when implementing code quality tools'",
-    "format": "echo 'Add prettier when implementing code formatting'"
+    "format": "echo 'Add prettier when implementing code formatting'",
+    "type-check": "tsc --noEmit",
+    "server": "echo 'Add fastify when implementing web server'"
   },
   "keywords": [
     "strava",
@@ -18,14 +21,21 @@
     "analytics",
     "postgis",
     "nodejs",
-    "express"
+    "express",
+    "typescript"
   ],
   "author": "Kamil Mateusiak",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^22.0.0",
+    "typescript": "^5.9.2"
+  },
   "engines": {
     "node": ">=22.19.0",
     "npm": ">=10.0.0"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "fastify": "^5.5.0"
   }
 }
