--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "test": "echo 'Add jest when implementing testing'",
-    "lint": "echo 'Add eslint when implementing code quality tools'",
-    "format": "echo 'Add prettier when implementing code formatting'",
+    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write src/**/*.ts",
     "type-check": "tsc --noEmit",
-    "server": "echo 'Add fastify when implementing web server'"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format:check": "prettier --check src/**/*.ts",
+    "prepare": "husky"
   },
   "keywords": [
     "strava",
@@ -28,6 +30,17 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-unicorn": "^49.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.2"
   },
   "engines": {
@@ -37,5 +50,14 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "fastify": "^5.5.0"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   }
 }
